syntax = "proto2";

package ostorlab.runtimes.proto;


message Arg {
  // Defines the arguments passed to the agent. All arg values are serialized to raw bytes and define a type that the
  // must know how to handle.
  optional string name = 1;
  optional string type = 2;
  optional bytes  value = 3;
}

message PortMapping {
  // Defines container port mapping. All ports are mapping on 0.0.0.0.
  optional sint32 source_port = 1;
  optional sint32 destination_port = 2;
}


message AgentInstanceSettings {
  // Proto definition of agent instance settings. This is use to serialize all the settings passed from the runtime to
  // the agent.
  optional string key = 1;
  optional string bus_url = 2;
  optional string bus_exchange_topic = 3;
  optional string bus_management_url = 4;
  optional string bus_vhost = 5;
  repeated Arg args = 6;
  repeated string constraints = 7;
  repeated string mounts = 8;
  optional string restart_policy = 9;
  optional sint64 mem_limit = 10;
  repeated PortMapping open_ports = 11;
  optional sint32 replicas = 12;
  optional string healthcheck_host = 13;
  optional sint32 healthcheck_port = 14;
  optional string redis_url = 15;
}
